# corn-ui

./: .gitignore  CMakeLists.txt  README.md  conan.cmake  conanfile.txt  cornui-config.cmake.in  vcpkg.json
docs/: README.md
examples/: CMakeLists.txt  example.xml  main.cpp
examples/animations/: main.cpp  scenes.cpp  scenes.h
examples/animations/resources/ui/scripts/: animation.js
examples/animations/resources/ui/styles/: common.ccss  menu.ccss
examples/animations/resources/ui/views/: main_menu.xml
examples/clangy-bird/: clangy-bird.cpp  components.cpp  components.h  constants.h  entities.cpp  etities.cpp  etities.h  event_args.h  scenes.cpp  scenes.h  systems.cpp  systems.h  text_manager.cpp  text_manager.h
examples/clangy-bird/resources/: text.json
examples/clangy-bird/resources/ui/: home.xml  main_menu.ccss  main_menu.js  main_menu.xml  menu.ccss  settings.ccss  settings.xml  text.json  underline.js
examples/clangy-bird/resources/ui/scripts/: underline.js
examples/clangy-bird/resources/ui/styles/: common.ccss  menu.ccss  pause_menu.ccss  settings.ccss  tutorial.ccss
examples/clangy-bird/resources/ui/views/: main_menu.xml  pause_menu.xml  settings.xml  tutorial.xml
include/cornui/: css.h  dom.h  js.h  ui.h  util.h  xml.h
include/cornui/css/: animation.h  cssom.h  cssom_node.h
include/cornui/dom/: dom_node.h  dom_tree.h  style.h
include/cornui/js/: engine.h  js_event_args.h  request.h  runtime.h
include/cornui/util/: css_parser.h  exception.h  key.h  reserved.h
include/cornui/xml/: dom.h  dom_node.h  dom_node_getter_setter.cpp  easing_function.h
src/: placeholder.cpp
src/cornui/: ui.cpp
src/cornui/css/: animation.cpp  cssom.cpp  event_animation.h
src/cornui/js/: class_list.cpp  class_list.h  common.cpp  common.h  console.cpp  console.h  context_data.cpp  context_data.h  document.cpp  document.h  dom_node.cpp  dom_node.h  engine.cpp  engine_impl.h  event.cpp  event.h  js_event_args.cpp  js_request.cpp  js_request.h  request.cpp  request.h  runtime.cpp  runtime_impl.h
src/cornui/util/: css_parser.cpp  exception.cpp  graph.h  key.cpp  reserved.cpp  style_name.cpp  style_name.h
src/cornui/xml/: dom.cpp  dom_helper.h  dom_init.cpp  dom_node.cpp  dom_node_getter_setter.cpp  dom_node_xml.cpp  easing_function.cpp  xml_helper.cpp  xml_helper.h
src/css/: cssom.cpp  cssom_node.cpp
src/dom/: dom_helper.h  dom_node.cpp  dom_tree.cpp
src/util/: css_parser.cpp  exception.cpp
src/xml/: dom.cpp  dom_helper.h  dom_node.cpp  dom_node_getter_setter.cpp
test/: CMakeLists.txt  main.cpp
test/common/: dummy_scene.h  utility.cpp  utility.h  virtual_node.cpp  virtual_node.h
test/resources/ui/def/views/: mytag.xml
test/resources/ui/scripts/: events.js  simple_js.js
test/resources/ui/styles/: simple.ccss
test/resources/ui/views/: empty.xml  events.xml  load_def.xml  simple.xml  simple_js.xml
test/unit/util/: css_parser.cpp
test/unit/xml/: dom.cpp
